--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,4 +45,7 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.0.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.8.0'
+    compile 'com.android.support:cardview-v7:25.4.0'
+    compile 'com.github.chrisbanes:PhotoView:2.1.2'
+
 }
